[gd_scene load_steps=4 format=3 uid="uid://br3nsgkre2nxn"]

[ext_resource type="Script" path="res://Scenes/menu/settings/SettingsMenu.gd" id="1_oetdt"]
[ext_resource type="PackedScene" uid="uid://tpqav8vid64q" path="res://Scenes/menu/settings/settings_tab_container.tscn" id="2_go3o4"]

[sub_resource type="SystemFont" id="SystemFont_cj7pi"]
font_names = PackedStringArray("Impact")
generate_mipmaps = true
subpixel_positioning = 0

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oetdt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_cj7pi")
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="SettingsTabContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_go3o4")]
layout_mode = 2
size_flags_vertical = 3

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
